# not-pacman

./: CMakeLists.txt  README.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: buttons.js  canvas.js  grid.js  init.js  main.js  paint.js  utils.js
frontend/js/entities/: ghost.js  ghost_fsm.js  player.js
src/: game_data.hpp  game_map.hpp  main.cpp  map.hpp  path_finder.cpp  path_finder.hpp  pathfinder.cpp  pathfinder.hpp  server.hpp  structs.hpp
